*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -43,6 +43,7 @@ Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
 Eclipse SDK 3.0 Build - ?th June 2003 
 <br>Project org.eclipse.jdt.core v_359
+(<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_359">cvs</a>).
 <h2>
 What's new in this drop</h2>
 <ul>
@@ -85,6 +86,7 @@ Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
 Eclipse SDK 3.0 Build - 18th June 2003 
 <br>Project org.eclipse.jdt.core v_357b
+(<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_357b">cvs</a>).
 <h2>
 What's new in this drop</h2>
 <ul>
@@ -101,6 +103,7 @@ Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
 Eclipse SDK 3.0 Build - 16th June 2003 
 <br>Project org.eclipse.jdt.core v_358
+(<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_358">cvs</a>).
 
 <p><b>NOTE:</b> This version got backed out due to severe regression
 (see <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38951">38951</a> NPE in editor while saving contents).
@@ -362,41 +365,12 @@ Need an API to reload the classpath from the file
 bytecode generated for evaluation with parentheses is wrong
 
 
-<h3>Problem Reports Closed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38977">38977</a>
-Deadlock on index manager while shutting down target eclipse
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38873">38873</a>
-Compilation Units which aren't any.
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=7294">7294</a>
-StackOverflowException during IType.getFields()
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36777">36777</a>
-refreshing a library results in jzentry==0 failure message 
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38766">38766</a>
-Would like the Compiler to ignore the serialVersionUID
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38763">38763</a>
-Unexpected NLS problem
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38441">38441</a>
-Allow src folder exclusion filters with no path that exclude all files of a certain type
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38702">38702</a>
-Compiler generates illegal bytecode in switch statement. VerifyError.
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38688">38688</a>
-exception in the console window 
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38163">38163</a>
-NPE while building type hierarchy 
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37949">37949</a>
-NPE from SourceTypeConverter 
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37804">37804</a>
-NPE when opening class 
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38607">38607</a>
-Refresh does not capture changes in jar files
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38674">38674</a>
-3.0 M1 - Preserve unused local variables doesn't seem to work
-
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
 Eclipse SDK 3.0 Build - 5th June 2003 - 3.0 MILESTONE-1
 <br>Project org.eclipse.jdt.core v_357
+(<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_357">cvs</a>).
 <h2>
 What's new in this drop</h2>
 <ul>
@@ -406,18 +380,13 @@ What's new in this drop</h2>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37274">37274</a>
 Deadlock on plugin import
 
-<h3>Problem Reports Closed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38398">38398</a>
-Deadlock importing binaries
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38398">38509</a>
-deadlock on importing plugins
-
 
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
 Eclipse SDK 3.0 Build - 4th June 2003 - 3.0 MILESTONE-1
 <br>Project org.eclipse.jdt.core v_356
+(<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_356">cvs</a>).
 <h2>
 What's new in this drop</h2>
 <ul>
@@ -427,15 +396,13 @@ What's new in this drop</h2>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38362">38362</a>
 Inconsistent output when using comparrisson operators
 
-<h3>Problem Reports Closed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37417">37417</a>
-faster method to clean output folder
 
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
 Eclipse SDK 3.0 Build - 3rd June 2003
 <br>Project org.eclipse.jdt.core v_355
+(<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_355">cvs</a>).
 <h2>
 What's new in this drop</h2>
 <ul>
@@ -452,30 +419,13 @@ this = null; should raise compile time error
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38124">38124</a>
 Brackets around cast accepted by Eclipse but not javac
 
-<h3>Problem Reports Closed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38282">38282</a>
-Multiple Java Build Paths
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38235">38235</a>
-Variables should be allowed to contain other variables/lists
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38345">38345</a>
-VerifyError, Inconsistent stack height with try/switch/if combination
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38172">38172</a>
-Non-deprecated classes in jar files are marked as deprecated
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38152">38152</a>
-Java Compiler Error with method visibility
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38146">38146</a>
-NPE in compiler
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38133">38133</a>
-Strange behaviour of task "Nested block depth ...."
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37376">37376</a>
-Adding access to parser errors in org.eclipse.jdt.core.jdom
-
 
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
 Eclipse SDK 3.0 Build - 26th May 2003
 <br>Project org.eclipse.jdt.core v_354
+(<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_354">cvs</a>).
 <h2>
 What's new in this drop</h2>
 <ul>
@@ -509,34 +459,13 @@ ExceptionInInitializerError when using JDTCompilerAdapter
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36307">36307</a>
 JDK1.4.2: Wrong declaring class for clone method on array class
 
-<h3>Problem Reports Closed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38043">38043</a>
-NPE during rebuild of Java source file
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37940">37940</a>
-SerialVersionUID conflict between eclipse and ANT based compilations
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37417">37417</a>
-faster method to clean output folder
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=30530">30530</a>
-Search returns most exact matches as inexact 
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37876">37876</a>
-Assertion failure when making a search references 
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36332">36332</a>
-can't attach more than one source dir to a jar
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36211">36211</a>
-REGRESSION: VerifyError
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37548">37548</a>
-Array protected methods should use array type as receiver type in bytecodes
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37840">37840</a>
-NPE in DeltaProcessor using latest JDT/Core version v_353
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37801">37801</a>
-JDT compiler bug ?
-
 
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
 Eclipse SDK 3.0 Build - 19th May 2003
 <br>Project org.eclipse.jdt.core v_353
+(<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_353">cvs</a>).
 <h2>
 What's new in this drop</h2>
 <ul>
@@ -562,6 +491,7 @@ Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
 Eclipse SDK 3.0 Build - 13th May 2003
 <br>Project org.eclipse.jdt.core v_352
+(<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_352">cvs</a>).
 <h2>
 What's new in this drop</h2>
 <ul>
@@ -580,32 +510,13 @@ Compiler generates unnecessary byte codes
 AST: Wrong source ranges on VariableDeclExpression
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37200">37200</a>
 "Source->Generate Delegate Methods..." fails
-	  	
-<h3>Problem Reports Closed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37526">37526</a>
-compiler message: ... is out of range
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37296">37296</a>
-Eclipse compiler error - ambiguous method call
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37426">37426</a>
-NPE while compiling
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37328">37328</a>
-class incompatability compiling within/outside of eclipse
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37122">37122</a>
-non-existent import flaged as "not used" instead of "not found"
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37247">37247</a>
-invalid byte code: java.lang.VerifyError
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37168">37168</a>
-Task tag produces two tasks when next to a closing brace
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37051">37051</a>
-getNonJavaResources() should return an array of IResource 
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36819">36819</a>
-AST: binding of a anonymous class constructor
 
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
 Eclipse SDK 3.0 Build - 29th April 2003
 <br>Project org.eclipse.jdt.core v_351
+(<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_351">cvs</a>).
 <h2>
 What's new in this drop</h2>
 <ul>
@@ -625,23 +536,12 @@ Resource duplication message should list location of duplicate
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36718">36718</a>
 Compiler should not generate references to classes not on the classpath
 
-<h3>Problem Reports Closed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36880">36880</a>
-High processor usage when building
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=33756">33756</a>
-Eclipse doesn't seem to work if you delete the JDK
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36857">36857</a>
-Using the operator += with a String on the right side results in a compile error.
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=32160">32160</a>
-Tolerate superficial classpath changes
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36733">36733</a>
-Java compilation errors after editing installed VMs
-
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
 Eclipse SDK 3.0 Build - 22nd April 2003
 <br>Project org.eclipse.jdt.core v_350
+(<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_350">cvs</a>).
 <h2>
 What's new in this drop</h2>
 <ul>
@@ -741,67 +641,13 @@ CastExpression resolution departs from JLS section 6.5.1
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36165">36165</a>
 [DOM/AST] Incorrect grammar rule in TypeDeclaration
 
-<h3>Problem Reports Closed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=21304">21304</a>
-Have option for compiler warning on redeclaration of instance/class variables as local variables
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36709">36709</a>
-absent line numbers msg when debugging
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36620">36620</a>
-NPE Searching for workspace references
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36620">36620</a>
-Possibility of inlining getter and setter
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36543">36543</a>
-compiler's incomplete build path option is not working
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=29331">29331</a>
-Problems with workspace [build path]
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36337">36337</a>
-Linked Classfolder - Selection in Outline does not synchronize with editor 
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36437">36437</a>
-Build problem when using required (dependend) project
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36452">36452</a>
-Compiler: variable declaraion statment as if body
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=34427">34427</a>
-Type hierarchy does not resolve for "Task" 
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=35263">35263</a>
-Eclipse crashes when opening Hierarchy view for java.lang.Eception 
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=35272">35272</a>
-Inconsistent validation of CP entries 
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36397">36397</a>
-Compiling source which indirectly references unavailable   classes
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=35594">35594</a>
-antlr.LLkParser fails as superclass in Eclipse 2.1, javac works
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=35993">35993</a>
-Project not built when it contains linked resource with undefined path variable
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36246">36246</a>
-JDK1.4.2: VerifyError using try/finally
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36231">36231</a>
-Overjealous "Assignment has no effect"
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36260">36260</a>
-Java compiler bug.
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=33786">33786</a>
-IMethod:isSimilar - ignoring isConstructor
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=35978">35978</a>
-JDTCompilerAdapter doesn't use user preference for warnings 
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=35987">35987</a>
-unused private method false positive?
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=31251">31251</a>
-something knows how to make names plural but it's harcoded i think
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=35818">35818</a>
-Unused field /variable compiler problem should ignore assignment
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=3259">3259</a>
-JM - Should flush source ranges in SourceMapper when closing ClassFile (1GDKLA1)
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=35904">35904</a>
-Problem detecting gif file length
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=35784">35784</a>
-detect hiding (non-private) fields
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=25838">25838</a>
-Warning when overriding field
 
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
 Eclipse SDK 2.1 Build (before 3.0/2.1.1 branching) - 31st March 2003
 <br>Project org.eclipse.jdt.core v_312
+(<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_312">cvs</a>).
 <h2>
 What's new in this drop</h2>
 <ul>
