*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -90,7 +90,7 @@ Eclipse SDK 3.0 Build - 18th June 2003
 <h2>
 What's new in this drop</h2>
 <ul>
-<li>backport index manager deadlock fix on top of v_357</li>
+<li>Backported index manager deadlock fix on top of v_357</li>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
