--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -41,7 +41,7 @@
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
-Eclipse SDK 3.0 Build - ?th June 2003 
+Eclipse SDK 3.0 Build - 23rd June 2003 
 <br>Project org.eclipse.jdt.core v_359
 (<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_359">cvs</a>).
 <h2>
