--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -50,7 +50,9 @@ What's new in this drop</h2>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39259">39259</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39311">39311</a>
+Outliner did not refresh after method rename (refactor) 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39259">39259</a>
 While statement has wrong source position
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39248">39248</a>
 object += "string"; okay with javac but not JDT--JLS ambiguity?
