Moved out the stylesheet definition to it's own file so that other HTML files within Chainsaw can share it.

--- a/src/java/org/apache/log4j/chainsaw/WelcomePanel.html
+++ b/src/java/org/apache/log4j/chainsaw/WelcomePanel.html
@@ -1,34 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <HTML>
 <HEAD>
-<style>
- BODY, TABLE, TD,  {
-  font-size: 10px;
-  color: #000000;
-  font-family: Arial, Tahoma, Helvetica, sans-serif;
-}
-
-H1 {
-
-  font-size: 14px;
-  font-weight: bold;
-}
-
-H2 {
-  font-size: 12px;
-  font-weight: bold;
-}
-
-.TableTitle {
-  font-weight: bold;
-  background-color: #000089;
-  color: #FFFFFF;
-}
-
-.HotKey {
-  font-weight: bold;
-}
-</style>
+<link rel="stylesheet" href="stylesheet.css" type="text/css">
 </HEAD>
 
 <BODY BGCOLOR="#FFFFFF" TEXT="#000000" LINK="#FF0000" VLINK="#800000" ALINK="#FF00FF" BACKGROUND="?">
