*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -90,7 +90,9 @@ a <code>WorkingCopyOwner</code> parameter, that defines the working copies to co
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36888">36888</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36232">36232</a>
+binding do not fully consider working copies 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36888">36888</a>
 Close the gap between original and working copies 
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39311">39311</a>
 Outliner did not refresh after method rename (refactor) 
