--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -44,6 +44,8 @@ What's new in this drop</h2>
 <ul>
 <li> Plugin version ID got incremented to 3.0.0. 
 </li>
+<li> Removed tolerance for relative source attachments in <code>JavaCore.newLibraryEntry(...)</code>. Only
+allowing relative empty pathes so as to permit using classpath variables to denote the absence of a source attachment.
 <li>To finish closing the gap between compilation units and working copies 
 (see <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36888 ">bug 36888 </a>), exiting APIs were augmented with
 a <code>WorkingCopyOwner</code> parameter, that defines the working copies to consider in the operation. The following new APIs were added:
