--- a/notes/API_changes.html
+++ b/notes/API_changes.html
@@ -363,13 +363,15 @@ IJavaElement getPrimaryElement();
 </pre>
 </li>
 <li>2003/06/27 (->M2)To finish closing the gap between compilation units and working copies 
-(see <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36888 ">bug 36888 </a>), exiting APIs were augmented with
-a <code>WorkingCopyOwner</code> parameter, which defines the set of working copies to privilege during this operation. 
+(see <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36888 ">bug 36888 </a>), new APIs were added to generalize
+the usage of a working copy owner (entire JavaModel is now aware of owned working copies). These new APIs are copies of existing APIs augmented with
+a <code>WorkingCopyOwner</code> parameter, that defines the working copies to consider in the operation. 
 When specifying an owner parameter, all working copies belonging to this owner will implicitly take precedence over primary ones
 (without requiring the owner to remember all its working copies, as in 2.1 era). Note that when no owned working copy is found, a primary
 unit will be considered instead, and since primary units have a built-in working copy (see <code>ICompilationUnit.becomeWorkingCopy(...)</code>),
 the primary unit may already be in working copy mode (very likely since an editor got opened on it). This means that an owner will already 
 transparently see unsaved editor contents for all units for which it has no better working copy to contribute.
+The following new APIs were added:
 The following new APIs were added:
 	<ul>
 	<li><code>AST.parseCompilationUnit(char[] source, String unitName, IJavaProject project, WorkingCopyOwner owner)</code></li>
