*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -88,7 +88,7 @@ The following new APIs were added:
 	<li><code>SearchEngine.createHierarchyScope(IType type, WorkingCopyOwner owner)</code></li>
 	</ul>
 </li>
-<li> added optional problem to signal superfluous semicolons.
+<li> Added optional problem to signal superfluous semicolons.
 <pre>
 * COMPILER / Reporting Superfluous Semicolon
 *    When enabled, the compiler will issue an error or a warning if a superfluous semicolon is met.
