*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -44,6 +44,8 @@ What's new in this drop</h2>
 <ul>
 <li> Plugin version ID got incremented to 3.0.0. 
 </li>
+<li> Removed method Parser#grammar(). Now, the grammar is only contain in file grammar/java_1_4.g.
+</li>
 <li> Removed fix for <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39248">39248</a>
 since old behavior was actually the right one.
 </li>
