*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -36,6 +36,22 @@
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
+Eclipse SDK 3.0 Build - ?th July 2003 
+<br>Project org.eclipse.jdt.core v_361
+(<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_361">cvs</a>).
+<h2>
+What's new in this drop</h2>
+<ul>
+<li> Removed method <code>Parser#grammar()</code>. Now, the grammar is only contain in file <code>grammar/java_1_4.g</code>.
+</li>
+</ul>
+
+<h3>Problem Reports Fixed</h3>
+
+
+<p><hr><h1>
+Eclipse Platform Build Notes&nbsp;<br>
+Java Development Tooling Core</h1>
 Eclipse SDK 3.0 Build - 1st July 2003 
 <br>Project org.eclipse.jdt.core v_360
 (<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_360">cvs</a>).
@@ -43,8 +59,6 @@ Eclipse SDK 3.0 Build - 1st July 2003
 What's new in this drop</h2>
 <ul>
 <li> Plugin version ID got incremented to 3.0.0. 
-</li>
-<li> Removed method Parser#grammar(). Now, the grammar is only contain in file grammar/java_1_4.g.
 </li>
 <li> Removed fix for <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39248">39248</a>
 since old behavior was actually the right one.
