*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -42,7 +42,7 @@ Eclipse SDK 3.0 Build - ?th July 2003
 <h2>
 What's new in this drop</h2>
 <ul>
-<li> Removed method <code>Parser#grammar()</code>. Now, the grammar is only contain in file <code>grammar/java_1_4.g</code>.
+<li> Removed method <code>Parser#grammar()</code>. From now on, the grammar is defined in separate file <a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/grammar/java_1_4.g"><code>java_1_4.g</code></a>.
 </li>
 </ul>
 
