--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -42,7 +42,7 @@ Eclipse SDK 3.0 Build - ?th July 2003
 <h2>
 What's new in this drop</h2>
 <ul>
-<li> Removed method <code>Parser#grammar()</code>, which used to host the Java grammar in as a massive comment. 
+<li> Removed method <code>Parser#grammar()</code>, which was hosting the Java grammar as a massive comment. 
 From now on, the grammar is defined in its own separate file: <a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/grammar/java_1_4.g"><code>java_1_4.g</code></a>.
 </li>
 </ul>
