*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -48,7 +48,8 @@ From now on, the grammar is defined in its own separate file: <a href="http://de
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39475">39475</a>
+Extra error diagnosis in editor from siblings
 
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
