--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -60,7 +60,11 @@ From now on, the grammar is defined in its own separate file: <a href="http://de
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39268">39268</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36989>36989</a>
+Incorrect error for "super must be first statement in constructor"
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=3319>3319</a>
+wrong compile-time error message (1GG1LDK)
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39268">39268</a>
 Optional warning for indirect static references
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39533">39533</a>
 Working copy with no corresponding file not considered by NameLookup 
