--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -60,7 +60,9 @@ From now on, the grammar is defined in its own separate file: <a href="http://de
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36989>36989</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39168>39168</a>
+Could remove JavaElement.fLEType field 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36989>36989</a>
 Incorrect error for "super must be first statement in constructor"
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=3319>3319</a>
 wrong compile-time error message (1GG1LDK)
