--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -71,11 +71,13 @@ From now on, the grammar is defined in its own separate file: <a href="http://de
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39168>39168</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39624">39624</a>
+Should warn about predicate throwing exceptions
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39168">39168</a>
 Could remove JavaElement.fLEType field 
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36989>36989</a>
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36989">36989</a>
 Incorrect error for "super must be first statement in constructor"
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=3319>3319</a>
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=3319">3319</a>
 wrong compile-time error message (1GG1LDK)
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39268">39268</a>
 Optional warning for indirect static references
